# yrshell_esp32_espidf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.waveshare_esp32_s3_zero
boards/: esp32-s3-zero.json
components/espUtilities/: CMakeLists.txt  IntervalTimer.h  Sliceable.cpp  Sliceable.h
components/yrShell/: CMakeLists.txt  YRShell.h  YRShellExec.h
components/yrShell/core/: YRShellDefines.h  YRShellInterpreter.cpp  YRShellInterpreter.h
components/yrShell/core/compile/: YRShellInterpreter.yr  compileOutput.txt
data/: start.yr
lib/espServers/: BleConnection.cpp  BleConnection.h  BleParser.h
lib/espUtilities/: CircularQ.h  HardwareSpecific.cpp  HardwareSpecific.h  IntervalTimer.cpp
lib/yrshell/core/: Dictionary.cpp  Dictionary.h
lib/yrshell/core/compile/: compiledDictionary.h
src/: AppManager.cpp  AppManager.h  BleConnection.cpp  BleConnection.h  CMakeLists.txt  LedDriver.h  LedStripDriver.cpp  LedStripDriver.h  SdLogger.cpp  SdLogger.h  SystemStatus.cpp  SystemStatus.h  TelnetServer.cpp  TelnetServer.h  UploadDataClient.cpp  UploadDataClient.h  Utilities.cpp  Utilities.h  VictronDevice.cpp  VictronDevice.h  WifiConnection.cpp  WifiConnection.h  YRShellEsp32.cpp  YRShellEsp32.h  esp_log_custom.h  idf_component.yml  main.c  main.cpp
